3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/porting: changed open_and_uncompress to use const char* instead of
   char*, since value shouldn't be changed (and isn't).
include/libproto.h: changed prototype for open_and_uncompress
Ryo 2004-04-28

------------------------------------------------------------------------------
Changes for 1.6.0:

configure, Makefiles: Rebuilt for 1.6.0 release
doc/*/Makefile.am: Modified to use one makeps.pl utility in scripts directory.
doc/scripts/makeps.pl: Make this the definitive copy - fix problem with it 
   trying to combine big images when it doesn't need to.  Remove other copies.
doc/playbook/chap1.tex, doc/playbook/chap5.tex: Fix some obvious errors,
   but overall, the playbook is still quite out of date.
doc/playbook/treas2-extract: Have it not include abilities in given items,
   have it properly deal with multiple underscores in arch names.
doc/spoiler-html/spoiler.html, doc/spoiler.ps: Rebuilt
MSW 2004-04-26

server/apply.c: apply_savebed() - make call to terminate_all pets before
   call to remove_ob() so that pets are properly removed.
common/item.c, server/c_object.c: Fix code so that skill tools (talismans,
  holy symbols, etc) are properly describe.  Clean up formatting of long_desc()
MSW 2004-04-25


Change most shop buy/sell functions to use 64 bit values.  Problem arises
where player would sell valuable item, and if they wanted to buy them back,
it would overflow a 32 bit value, so they could buy them back for free.
Note quite as odd when you consider the buy/sell price for really valuable
items to be very different.
include/global.h: Add UINT32_MAX and other max type defines for our typedef